Integration Test added and Unit Test Adjustments